--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/app/scss/style.css" />
+    <link rel="stylesheet" href="./app/scss/style.css" />
     <script
       src="https://kit.fontawesome.com/5a360a2087.js"
       crossorigin="anonymous"
