added projects section

--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
           </div>
         </div>
     </section>
+    <section class="projects">
+      <div class="projects__content">
+        <h1>Projects</h1>
+        <div class="line"></div>
+        <div class="projects__wd">
+          <h2 class="section-title">Web <span>Dev</span></h2>
+          <div class="grid-container">
+            <a href="#">
+              <div class="project-1 card">
+                <div class="card-img"></div>
+                <h2>Project Name</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+              </div>
+            </a>
+            <div class="project-2 card">
+              <div class="card-img"></div>
+              <h2>Project Name</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+            </div>
+            <div class="project-3 card">
+              <div class="card-img"></div>
+              <h2>Project Name</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+            </div>
+          </div>
+        </div>
+        <div class="projects__uxui"></div>
+        <div class="projects__gd"></div>
+      </div>
+    </section>
   </body>
   <script src="app/js/script.js"></script>
 </html>
