--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
               <h2>Project Name</h2>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
             </div>
+            <div class="project-4 card">
+              <div class="card-img"></div>
+              <h2>Project Name</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+            </div>
           </div>
         </div>
         <div class="projects__uxui"></div>
