--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <div class="projects__gd"></div>
       </div>
     </section>
+    <!--LLegue al fin!-->
   </body>
   <script src="app/js/script.js"></script>
 </html>
