added project details

--- a/index.html
+++ b/index.html
@@ -146,33 +146,82 @@
         <div class="projects__wd">
           <h2 class="section-title">Web <span>Dev</span></h2>
           <div class="grid-container">
-            <a href="#">
+            <a href="#" class="">
               <div class="project-1 card">
                 <div class="card-img"></div>
-                <h2>Project Name</h2>
+                <h2>Cristian Tejeda</h2>
+                <p>Cristian Tejeda is a young photographer from the Dominican Republic. Photography started out of the need to express what he wanted to say to other people</p>
+              </div>
+            </a>
+            <a href="http://">
+              <div class="project-2 card">
+                <div class="card-img"></div>
+                <h2>TravelNow!</h2>
+                <p>Travelling agency website for destinations in the Dominican Republic.</p>
+              </div>
+            </a>
+            <a href="http://">
+              <div class="project-3 card">
+                <div class="card-img"></div>
+                <h2>Elena Joy</h2>
+                <p>Fully responsive online photography portfolio for Elena Joy.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="projects__uxui">
+          <h2 class="section-title">UX/ <span>UI</span></h2>
+          <div class="grid-container">
+            <a href="#">
+              <div class="project-4 card">
+                <div class="card-img"></div>
+                <h2>Carnval Dominicano</h2>
+                <p>UX/UI design for an online platform dedicated to teaching about the Dominican Carnival and all its characteristics.</p>
+              </div>
+            </a>
+            <a href="http://">
+              <div class="project-5 card">
+                <div class="card-img"></div>
+                <h2>Puntacana Sports</h2>
+                <p>Punta Cana Sports is an enterprise focused on organizing sporting events in the
+                  Dominican Republic.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="projects__gd">
+          <h2 class="section-title">Graphic <span>Design</span></h2>
+          <div class="grid-container">
+            <a href="#">
+              <div class="project-6 card">
+                <div class="card-img"></div>
+                <h2>Exodia</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
               </div>
             </a>
-            <div class="project-2 card">
-              <div class="card-img"></div>
-              <h2>Project Name</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
-            </div>
-            <div class="project-3 card">
-              <div class="card-img"></div>
-              <h2>Project Name</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
-            </div>
-            <div class="project-4 card">
-              <div class="card-img"></div>
-              <h2>Project Name</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
-            </div>
+            <a href="http://">
+              <div class="project-7 card">
+                <div class="card-img"></div>
+                <h2>Patron Vapes</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+              </div>
+            </a>
+            <a href="http://">
+              <div class="project-8 card">
+                <div class="card-img"></div>
+                <h2>Love is in the Air</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+              </div>
+            </a>
+            <a href="http://">
+              <div class="project-9 card">
+                <div class="card-img"></div>
+                <h2>Mima's Honey</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+              </div>
+            </a>
           </div>
         </div>
-        <div class="projects__uxui"></div>
-        <div class="projects__gd"></div>
-      </div>
     </section>
     <!--LLegue al fin!-->
   </body>
