--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </div>
         </div>
     </section>
-    <!--LLegue al fin!-->
+    <!--Update: 9:25AM-->
   </body>
   <script src="app/js/script.js"></script>
 </html>
