--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <a href="http://">
               <div class="project-5 card">
                 <div class="card-img"></div>
-                <h2>Puntacana Sports</h2>
+                <h2>Punta Cana Sports</h2>
                 <p>Punta Cana Sports is an enterprise focused on organizing sporting events in the
                   Dominican Republic.</p>
               </div>
