--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <a href="#">
               <div class="project-4 card">
                 <div class="card-img"></div>
-                <h2>Carnval Dominicano</h2>
+                <h2>Carnaval Dominicano</h2>
                 <p>UX/UI design for an online platform dedicated to teaching about the Dominican Carnival and all its characteristics.</p>
               </div>
             </a>
@@ -223,6 +223,9 @@
           </div>
         </div>
     </section>
+    <footer>
+      <p>Hermes Pellerano &copy; 2021</p>
+    </footer>
     <!--Update: 9:27AM-->
   </body>
   <script src="app/js/script.js"></script>
