cris page added

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="projects__wd">
           <h2 class="section-title">Web <span>Dev</span></h2>
           <div class="grid-container">
-            <a href="#" class="">
+            <a href="./app/projects/cris photography/Cristian_Tejeda.html" class="">
               <div class="project-1 card">
                 <div class="card-img"></div>
                 <h2>Cristian Tejeda</h2>
