added project pages

--- a/app/projects/elena joy/Elena_Joy.html
+++ b/app/projects/elena joy/Elena_Joy.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container flex flex-jc-sb flex-ai-c">
-        <a href="../../../index.html" class="header__logo">Pellerano</a>
+        <a href="/" class="header__logo">Pellerano</a>
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
@@ -48,14 +48,14 @@
     </header>
     <div class="project">
       <div class="project__body">
-        <h1>Cristian Tejeda</h1>
+        <h1>Elena Joy</h1>
         <div class="underline"></div>
       </div>
       <div class="project__img">
         <div
           class="img"
           style="
-            background: url('../cris\ photography/cris_photography_thumbnail.png');
+            background: url('../elena\ joy/elena_joy_thumbnail.png');
             background-size: cover;
             background-repeat: no-repeat;
           "
@@ -66,16 +66,17 @@
         <div class="underline"></div>
       </div>
       <p>
-        <span>Cristian Tejeda</span> is a young introvert photographer from the
-        <span>Dominican Republic.</span>
-        He began photography out of the need to express what he wanted to say to
-        other people, so that people like him they don't feel alone and have
-        someone to count on. His <span>goal</span> is to capture the small
-        details that bring out the simplicity and beauty of life.
+        Fully responsive online photography portfolio for Elena Joy.
+        <br />
+        <br />
+        <span>Elena Joy</span> is an American photographer whose sole purpose is
+        to be able to capture the most important moments in an event by
+        presenting a very compelling story through the magic and power of
+        digital photography.
       </p>
       <div class="project__cta">
         <a
-          href="https://pellerano.github.io/CristianTejeda/index.html"
+          href="https://pellerano.github.io/Photography/"
           target="_blank"
           class="site-btn"
           >Visit Site</a
