--- a/app/projects/travel now/TravelNow.html
+++ b/app/projects/travel now/TravelNow.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container flex flex-jc-sb flex-ai-c">
-        <a href="../../../index.html" class="header__logo">Pellerano</a>
+        <a href="/" class="header__logo">Pellerano</a>
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
@@ -48,15 +48,16 @@
     </header>
     <div class="project">
       <div class="project__body">
-        <h1>Cristian Tejeda</h1>
+        <h1>TravelNow!</h1>
         <div class="underline"></div>
       </div>
       <div class="project__img">
         <div
           class="img"
           style="
-            background: url('../cris\ photography/cris_photography_thumbnail.png');
+            background: url('../travel\ now/travel_now_thumbnail.png');
             background-size: cover;
+            background-position: center;
             background-repeat: no-repeat;
           "
         ></div>
@@ -66,16 +67,18 @@
         <div class="underline"></div>
       </div>
       <p>
-        <span>Cristian Tejeda</span> is a young introvert photographer from the
-        <span>Dominican Republic.</span>
-        He began photography out of the need to express what he wanted to say to
-        other people, so that people like him they don't feel alone and have
-        someone to count on. His <span>goal</span> is to capture the small
-        details that bring out the simplicity and beauty of life.
+        Travelling agency website for destinations in the Dominican Republic.
+        <br />
+        <br />
+        <span>TravelNow!</span> is passionate about travel and sharing the
+        wonders of the Dominican Republic on the leisure travel side, and
+        providing corporate travelers hi-touch services to facilitate their
+        business travel needs. They're an employee-owned travel agency anchored
+        by their values, integrity and dedication to customer service.
       </p>
       <div class="project__cta">
         <a
-          href="https://pellerano.github.io/CristianTejeda/index.html"
+          href="https://pellerano.github.io/TravelNow/"
           target="_blank"
           class="site-btn"
           >Visit Site</a
