--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container flex flex-jc-sb flex-ai-c">
-        <a href="/" class="header__logo">Pellerano</a>
+        <a href="../../../index.html" class="header__logo">Pellerano</a>
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
         </a>
         <div class="header__links hide-for-mobile">
-          <a href="#">Home</a><a href="#">About</a><a href="#">Skills</a
+          <a href="../../../index.html">Home</a><a href="#">About</a><a href="#">Skills</a
           ><a href="#">Projects</a>
         </div>
         <button type="button" class="hide-for-mobile header__cta">
@@ -36,7 +36,7 @@
         </button>
       </nav>
       <div class="header__menu has-fade">
-        <a href="#">Home</a>
+        <a href="../../../index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Skills</a>
         <a href="#">Projects</a>
@@ -153,14 +153,14 @@
                 <p>Cristian Tejeda is a young photographer from the Dominican Republic. Photography started out of the need to express what he wanted to say to other people</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/travel now/TravelNow.html">
               <div class="project-2 card">
                 <div class="card-img"></div>
                 <h2>TravelNow!</h2>
                 <p>Travelling agency website for destinations in the Dominican Republic.</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/elena joy/Elena_Joy.html">
               <div class="project-3 card">
                 <div class="card-img"></div>
                 <h2>Elena Joy</h2>
