more project pages added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <div class="project-1 card">
                 <div class="card-img"></div>
                 <h2>Cristian Tejeda</h2>
-                <p>Cristian Tejeda is a young photographer from the Dominican Republic. Photography started out of the need to express what he wanted to say to other people</p>
+                <p>Cristian Tejeda is a young photographer from the Dominican Republic. He started out of the need to express what he wanted to say to other people.</p>
               </div>
             </a>
             <a href="./app/projects/travel now/TravelNow.html">
@@ -172,14 +172,14 @@
         <div class="projects__uxui">
           <h2 class="section-title">UX / <span>UI</span></h2>
           <div class="grid-container">
-            <a href="#">
+            <a href="./app/projects/carnaval dominicano/Carnaval_Dominicano.html">
               <div class="project-4 card">
                 <div class="card-img"></div>
                 <h2>Carnaval Dominicano</h2>
                 <p>UX/UI design for an online platform dedicated to teaching about the Dominican Carnival and all its characteristics.</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/pc sports/PCSports.html">
               <div class="project-5 card">
                 <div class="card-img"></div>
                 <h2>Punta Cana Sports</h2>
