--- a/app/projects/carnaval dominicano/Carnaval_Dominicano.html
+++ b/app/projects/carnaval dominicano/Carnaval_Dominicano.html
@@ -31,15 +31,15 @@
           <span></span>
         </a>
         <div class="header__links hide-for-mobile">
-          <a href="../../../index.html">Home</a><a href="#">About</a
-          ><a href="#">Skills</a><a href="#">Projects</a>
+          <a href="https://pellerano.github.io/portfolio-v3.1/">Home</a
+          ><a href="#">About</a><a href="#">Skills</a><a href="#">Projects</a>
         </div>
         <button type="button" class="hide-for-mobile header__cta">
           Contact
         </button>
       </nav>
       <div class="header__menu has-fade">
-        <a href="../../../index.html">Home</a>
+        <a href="https://pellerano.github.io/portfolio-v3.1/">Home</a>
         <a href="#">About</a>
         <a href="#">Skills</a>
         <a href="#">Projects</a>
