--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container flex flex-jc-sb flex-ai-c">
-        <a href="../../../index.html" class="header__logo">Pellerano</a>
+        <a href="https://pellerano.github.io/portfolio-v3.1/" class="header__logo">Pellerano</a>
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
         </a>
         <div class="header__links hide-for-mobile">
-          <a href="../../../index.html">Home</a><a href="#">About</a><a href="#">Skills</a
+          <a href="https://pellerano.github.io/portfolio-v3.1/">Home</a><a href="#">About</a><a href="#">Skills</a
           ><a href="#">Projects</a>
         </div>
         <button type="button" class="hide-for-mobile header__cta">
@@ -36,7 +36,7 @@
         </button>
       </nav>
       <div class="header__menu has-fade">
-        <a href="../../../index.html">Home</a>
+        <a href="https://pellerano.github.io/portfolio-v3.1/">Home</a>
         <a href="#">About</a>
         <a href="#">Skills</a>
         <a href="#">Projects</a>
