--- a/app/projects/carnaval dominicano/Carnaval_Dominicano.html
+++ b/app/projects/carnaval dominicano/Carnaval_Dominicano.html
@@ -24,7 +24,11 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container flex flex-jc-sb flex-ai-c">
-        <a href="/" class="header__logo">Pellerano</a>
+        <a
+          href="https://pellerano.github.io/portfolio-v3.1/"
+          class="header__logo"
+          >Pellerano</a
+        >
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
