all projects added

--- a/index.html
+++ b/index.html
@@ -192,32 +192,32 @@
         <div class="projects__gd">
           <h2 class="section-title">Graphic <span>Design</span></h2>
           <div class="grid-container">
-            <a href="#">
+            <a href="./app/projects/exodia/Exodia.html">
               <div class="project-6 card">
                 <div class="card-img"></div>
                 <h2>Exodia</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+                <p>Logo for Graduation class of 2017 at Puntacana International School</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/patron vapes/Patron_Vapes.html">
               <div class="project-7 card">
                 <div class="card-img"></div>
                 <h2>Patron Vapes</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+                <p>Logo created for Vape Shop in Punta Cana</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/love is in the air/LIITA.html">
               <div class="project-8 card">
                 <div class="card-img"></div>
                 <h2>Love is in the Air</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+                <p>Promo material created for event in Punta Cana, Bavaro</p>
               </div>
             </a>
-            <a href="http://">
+            <a href="./app/projects/Mima's Honey/MH.html">
               <div class="project-9 card">
                 <div class="card-img"></div>
                 <h2>Mima's Honey</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, minus?</p>
+                <p>Logo created for home grown honey online store in Santo Domingo</p>
               </div>
             </a>
           </div>
