--- a/app/projects/exodia/Exodia.html
+++ b/app/projects/exodia/Exodia.html
@@ -83,7 +83,7 @@
         >
       </div>
     </div>
-    <footer>
+    <footer style="margin-top: 3rem">
       <p>Hermes Pellerano &copy; 2021</p>
     </footer>
   </body>
