--- a/app/projects/love is in the air/LIITA.html
+++ b/app/projects/love is in the air/LIITA.html
@@ -60,7 +60,7 @@
           class="img"
           style="
             background: url('../love\ is\ in\ the\ air/liita_thumbnail.png');
-            background-size: 130%;
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
           "
@@ -83,7 +83,7 @@
         >
       </div>
     </div>
-    <footer style="margin-top: 3.5rem">
+    <footer style="margin-top: 5rem">
       <p>Hermes Pellerano &copy; 2021</p>
     </footer>
   </body>
