--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
       <div class="about__content">
         <div class="about__header">
           <h1>About</h1>
