added linkedin link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Dominican Republic</h2>
           </div>
           <div class="prof-links">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/hermespellerano/"><i class="fab fa-linkedin"></i></a>
             <a
               href="./app/sources/CV_Hermes_Pellerano.pdf"
               target="_blank"
